Bug 284462 - O Plasma falhou do nada
Summary: O Plasma falhou do nada
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-clock (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 287576 294127 294337 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-19 12:34 UTC by flavio
Modified: 2012-02-18 07:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description flavio 2011-10-19 12:34:42 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.7.1 (4.7.1)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-12-generic i686
Distribution: Ubuntu 11.10

-- Information about the crash:
Estava usando e simplesmente ele falhou. Estava utilizando o open office calc e de repente a barra de tarefas sumiu, depois voltou, e então recebi o bug

The crash can be reproduced some of the time.

-- Backtrace:
Application: Shell da área de trabalho do Plasma (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0xb7891b20 (LWP 1566))]

Thread 5 (Thread 0xb157fb70 (LWP 1567)):
#0  0x00b3ad10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x02aa47d5 in do_gettime (frac=0xb157f010, sec=0xb157f008) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x02b774b6 in QTimerInfoList::updateCurrentTime (this=0x8d25bb4) at kernel/qeventdispatcher_unix.cpp:339
#4  0x02b7780a in QTimerInfoList::timerWait (this=0x8d25bb4, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x02b76053 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xb157f11c) at kernel/qeventdispatcher_glib.cpp:136
#6  0x02b760ed in timerSourcePrepare (source=0x8d25b80, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x01b4788c in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x01b48637 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x01b48c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0x02b76b37 in QEventDispatcherGlib::processEvents (this=0x8d24438, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0x02b471dd in QEventLoop::processEvents (this=0xb157f2a0, flags=...) at kernel/qeventloop.cpp:149
#12 0x02b47421 in QEventLoop::exec (this=0xb157f2a0, flags=...) at kernel/qeventloop.cpp:201
#13 0x02a4a90b in QThread::exec (this=0x8d20580) at thread/qthread.cpp:498
#14 0x02b27e2d in QInotifyFileSystemWatcherEngine::run (this=0x8d20580) at io/qfilesystemwatcher_inotify.cpp:248
#15 0x02a4d7b3 in QThreadPrivate::start (arg=0x8d20580) at thread/qthread_unix.cpp:331
#16 0x085b9d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0x0089e0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 4 (Thread 0xaf1a0b70 (LWP 1570)):
#0  0x085bcd07 in __pthread_mutex_unlock_usercnt () from /lib/i386-linux-gnu/libpthread.so.0
#1  0x008abf54 in pthread_mutex_unlock () from /lib/i386-linux-gnu/libc.so.6
#2  0x01b47e70 in g_main_context_check () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x01b488f0 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x01b48c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x02b76b37 in QEventDispatcherGlib::processEvents (this=0x901d378, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0x02b471dd in QEventLoop::processEvents (this=0xaf1a02a0, flags=...) at kernel/qeventloop.cpp:149
#7  0x02b47421 in QEventLoop::exec (this=0xaf1a02a0, flags=...) at kernel/qeventloop.cpp:201
#8  0x02a4a90b in QThread::exec (this=0x8ff8168) at thread/qthread.cpp:498
#9  0x02b27e2d in QInotifyFileSystemWatcherEngine::run (this=0x8ff8168) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x02a4d7b3 in QThreadPrivate::start (arg=0x8ff8168) at thread/qthread_unix.cpp:331
#11 0x085b9d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0x0089e0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 3 (Thread 0xad71fb70 (LWP 1576)):
#0  0x00232416 in __kernel_vsyscall ()
#1  0x0088f40e in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0x01b5734b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x01b48896 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x01b48f9b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x068d5cea in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#6  0x01b6f5f4 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0x085b9d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#8  0x0089e0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 2 (Thread 0xabf0bb70 (LWP 2044)):
#0  0x00b3ad10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x02aa47d5 in do_gettime (frac=0xabf0b040, sec=0xabf0b038) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x02b774b6 in QTimerInfoList::updateCurrentTime (this=0xa30384c) at kernel/qeventdispatcher_unix.cpp:339
#4  0x02b7780a in QTimerInfoList::timerWait (this=0xa30384c, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x02b76053 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xabf0b14c) at kernel/qeventdispatcher_glib.cpp:136
#6  0x02b760ed in timerSourcePrepare (source=0xa303818, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x01b4788c in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x01b48637 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x01b48c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0x02b76b37 in QEventDispatcherGlib::processEvents (this=0xa1dc950, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0x02b471dd in QEventLoop::processEvents (this=0xabf0b2d0, flags=...) at kernel/qeventloop.cpp:149
#12 0x02b47421 in QEventLoop::exec (this=0xabf0b2d0, flags=...) at kernel/qeventloop.cpp:201
#13 0x02a4a90b in QThread::exec (this=0xa355d80) at thread/qthread.cpp:498
#14 0x00c884cb in Plasma::StorageThread::run (this=0xa355d80) at ../../plasma/private/storagethread.cpp:326
#15 0x02a4d7b3 in QThreadPrivate::start (arg=0xa355d80) at thread/qthread_unix.cpp:331
#16 0x085b9d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0x0089e0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb7891b20 (LWP 1566)):
[KCrash Handler]
#7  0x031bc994 in Plasma::Calendar::calendarTable (this=0x0) at ../../../libs/plasmaclock/calendar.cpp:248
#8  0x031bcb4b in Plasma::Calendar::dateHasDetails (this=0x0, date=...) at ../../../libs/plasmaclock/calendar.cpp:306
#9  0x031b7601 in ClockApplet::updateTipContent (this=0x8a55b80) at ../../../libs/plasmaclock/clockapplet.cpp:276
#10 0x031b828b in ClockApplet::toolTipAboutToShow (this=0x8a55b80) at ../../../libs/plasmaclock/clockapplet.cpp:238
#11 0x031ba218 in ClockApplet::qt_metacall (this=0x8a55b80, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfca5fdc) at ./clockapplet.moc:92
#12 0x030dbbc2 in Clock::qt_metacall (this=0x8a55b80, _c=QMetaObject::InvokeMetaMethod, _id=79, _a=0xbfca5fdc) at ./clock.moc:80
#13 0x02b4eb7d in metacall (argv=0xbfca5fdc, idx=79, cl=QMetaObject::InvokeMetaMethod, object=0x8a55b80) at kernel/qmetaobject.cpp:237
#14 QMetaObject::metacall (object=0x8a55b80, cl=QMetaObject::InvokeMetaMethod, idx=79, argv=0xbfca5fdc) at kernel/qmetaobject.cpp:232
#15 0x02b50670 in QMetaMethod::invoke (this=0xbfca613c, object=0x8a55b80, connectionType=Qt::DirectConnection, returnValue=..., val0=..., val1=..., val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., val9=...) at kernel/qmetaobject.cpp:1597
#16 0x02b52b57 in QMetaObject::invokeMethod (obj=0x8a55b80, member=0xdc8947 "toolTipAboutToShow", type=Qt::AutoConnection, ret=..., val0=..., val1=..., val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., val9=...) at kernel/qmetaobject.cpp:1151
#17 0x00cd823a in invokeMethod (val9=<optimized out>, val8=<optimized out>, val7=<optimized out>, val6=<optimized out>, val5=<optimized out>, val4=<optimized out>, val3=<optimized out>, val2=<optimized out>, val1=<optimized out>, val0=<optimized out>, member=0xdc8947 "toolTipAboutToShow", obj=0x8a55b80) at /usr/include/qt4/QtCore/qobjectdefs.h:426
#18 Plasma::ToolTipManagerPrivate::showToolTip (this=0x8729110) at ../../plasma/tooltipmanager.cpp:379
#19 0x00cd882f in Plasma::ToolTipManager::qt_metacall (this=0x8729438, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfca6514) at ./tooltipmanager.moc:88
#20 0x02b4eb7d in metacall (argv=0xbfca6514, idx=6, cl=QMetaObject::InvokeMetaMethod, object=0x8729438) at kernel/qmetaobject.cpp:237
#21 QMetaObject::metacall (object=0x8729438, cl=QMetaObject::InvokeMetaMethod, idx=6, argv=0xbfca6514) at kernel/qmetaobject.cpp:232
#22 0x02b5da6a in QMetaObject::activate (sender=0x8729488, m=0x2c7f5f8, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3278
#23 0x02bac7d5 in QTimer::timeout (this=0x8729488) at .moc/release-shared/moc_qtimer.cpp:134
#24 0x02b65286 in QTimer::timerEvent (this=0x8729488, e=0xbfca690c) at kernel/qtimer.cpp:271
#25 0x02b60994 in QObject::event (this=0x8729488, e=0xbfca690c) at kernel/qobject.cpp:1181
#26 0x05ae7d54 in notify_helper (e=0xbfca690c, receiver=0x8729488, this=0x862ad50) at kernel/qapplication.cpp:4486
#27 QApplicationPrivate::notify_helper (this=0x862ad50, receiver=0x8729488, e=0xbfca690c) at kernel/qapplication.cpp:4458
#28 0x05aed103 in QApplication::notify (this=0xbfca690c, receiver=0x8729488, e=0xbfca690c) at kernel/qapplication.cpp:3886
#29 0x0115b721 in KApplication::notify (this=0x86214a8, receiver=0x8729488, event=0xbfca690c) at ../../kdeui/kernel/kapplication.cpp:311
#30 0x02b4819e in QCoreApplication::notifyInternal (this=0x86214a8, receiver=0x8729488, event=0xbfca690c) at kernel/qcoreapplication.cpp:787
#31 0x02b78c10 in sendEvent (event=0xbfca690c, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#32 QTimerInfoList::activateTimers (this=0x862f914) at kernel/qeventdispatcher_unix.cpp:603
#33 0x02b76155 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:184
#34 idleTimerSourceDispatch (source=0x8630500) at kernel/qeventdispatcher_glib.cpp:231
#35 0x01b4825f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#36 0x01b48990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#37 0x01b48c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#38 0x02b76ada in QEventDispatcherGlib::processEvents (this=0x85d7230, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#39 0x05b9fe3a in QGuiEventDispatcherGlib::processEvents (this=0x85d7230, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#40 0x02b471dd in QEventLoop::processEvents (this=0xbfca6b84, flags=...) at kernel/qeventloop.cpp:149
#41 0x02b47421 in QEventLoop::exec (this=0xbfca6b84, flags=...) at kernel/qeventloop.cpp:201
#42 0x02b4c19d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#43 0x05ae58f4 in QApplication::exec () at kernel/qapplication.cpp:3760
#44 0x00ea718b in kdemain (argc=1, argv=0xbfca6d84) at ../../../../plasma/desktop/shell/main.cpp:120
#45 0x0804850b in main (argc=1, argv=0xbfca6d84) at plasma-desktop_dummy.cpp:3

Reported using DrKonqi
Comment 1 Beat Wolf 2011-11-26 08:37:06 UTC
*** Bug 287576 has been marked as a duplicate of this bug. ***
Comment 2 Aaron J. Seigo 2011-12-01 08:03:42 UTC
Git commit b13b460450f3acdebf40773ec3093c61a87697af by Aaron Seigo.
Committed on 01/12/2011 at 09:01.
Pushed by aseigo into branch 'KDE/4.7'.

calendarTable can be NULL

BUG:284462
BUG:287958

M  +1    -1    libs/plasmaclock/clockapplet.cpp

http://commits.kde.org/kde-workspace/b13b460450f3acdebf40773ec3093c61a87697af
Comment 3 Aaron J. Seigo 2011-12-01 08:03:53 UTC
Git commit 4ad889d4f8361fbdf192cc3cb903b880799447a1 by Aaron Seigo.
Committed on 01/12/2011 at 09:03.
Pushed by aseigo into branch 'master'.

calendartable can be null

CCBUG:287958
CCBUG:284462

M  +1    -1    libs/plasmaclock/clockapplet.cpp

http://commits.kde.org/kde-workspace/4ad889d4f8361fbdf192cc3cb903b880799447a1
Comment 4 Jekyll Wu 2012-02-15 07:48:42 UTC
*** Bug 294127 has been marked as a duplicate of this bug. ***
Comment 5 Jekyll Wu 2012-02-18 07:59:29 UTC
*** Bug 294337 has been marked as a duplicate of this bug. ***