calendarTable can be NULL

BUG:284462
BUG:287958